Add currency base management updates
